feat: RBAC 权限注解体系 + 风控等级拦截 + 切换企业接口
- 新增 @RequirePermission / @MaxRiskLevel 注解及对应拦截器
- 新增 Perm 常量类，统一管理权限标识
- 实现 PermissionAspect（BOTH 作用域），拦截方法级别权限校验
- 新增 SwitchEnterpriseVO / UserEnterpriseVO，login 返回 enterprises[]
- 实现 PUT /auth/enterprise/{id} 切换企业，旧 JWT 加入 Redis 黑名单
- 修复 loadEnterpriseContext 加载全部企业且按加入时间降序
- 修复 RiskCheckInterceptor 编译错误
- 为已实现接口标注 @MaxRiskLevel
- 新增 phase1-sys_permissions-init.sql（21 条权限 + 角色关联）